--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Yash Goyal | Portfolio</title>
+  <meta name="theme-color" content="#000000">
   <meta name="description" content="Portfolio of Yash Goyal">
   <meta name="keywords"
     content="yash, yash goyal, goyal,portfolio, developer, coding, music">
