--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <ul class="probootstrap-right-nav hidden-xs">
-          <li><a href="https://github.com/ygyash"><i class="icon-github2"></i></a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=100017286882067"><i class="icon-facebook2"></i></a></li>
-          <li><a href="https://www.instagram.com/mista_goyal/"><i class="icon-instagram2"></i></a></li>
+          <li><a href="https://github.com/ygyash" target="_blank"><i class="icon-github2"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank"><i class="icon-facebook2"></i></a></li>
+          <li><a href="https://www.instagram.com/mista_goyal/" target="_blank"><i class="icon-instagram2"></i></a></li>
         </ul>
         <div class="extra-text visible-xs">
           <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -230,8 +230,8 @@
                 performances according to their needs. It is also used for booking day to day slots of the music room.
               </p>
               <p><span class="icon"><i class="icon-global"></i>&nbsp;</span><a
-                  href="https://dhwaniportal.herokuapp.com/">Live Demo | <span class="icon"><i
-                      class="icon-github2"></i>&nbsp;</span><a href="https://github.com/ygyash/dhwani-portal">Source
+                  href="https://dhwaniportal.herokuapp.com/" target="_blank">Live Demo | <span class="icon"><i
+                      class="icon-github2"></i>&nbsp;</span><a href="https://github.com/ygyash/dhwani-portal" target="_blank">Source
                     Code</a></a></p>
 
             </div>
@@ -249,7 +249,7 @@
               <p>Ethereum based identity system where the user will be assigned an address which can be universally used
                 to authenticate various attributes associated with his identity.</p>
               <p><span class="icon"><i class="icon-github2"></i>&nbsp;</span><a
-                  href="https://github.com/ygyash/blockid">Source Code</a></a></p>
+                  href="https://github.com/ygyash/blockid" target="_blank">Source Code</a></a></p>
             </div>
           </div>
         </div>
@@ -266,7 +266,7 @@
                 back-end of this project. Bootstrap template 'Grayscale' has been used for front end.
               </p>
               <p><span class="icon"><i class="icon-github2"></i>&nbsp;</span><a
-                  href="https://github.com/ygyash/qrit">Source Code</a></a></p>
+                  href="https://github.com/ygyash/qrit" target="_blank">Source Code</a></a></p>
             </div>
           </div>
         </div>
@@ -275,17 +275,19 @@
   </section>
 
 
-  <div id="music" class="container">
-    <div class="probootstrap-cta probootstrap-animate">
-      <h2 class="mb20">I love producing music. </h2>
-      <p>I usually prefer producing music on FL Studio, but for audio editing, Audacity is very easy to use. I have
-        uploaded music on some streaming platforms as well. Care to listen? I am open to negative feedback :)
-      </p>
-      <p><span class="icon"><i class="icon-spotify"></i>&nbsp;</span><a
-          href="https://open.spotify.com/artist/4tQXuIKc8QPdRwjC16MrOe">Spotify</a> | <span class="icon"><i
-            class="icon-youtube"></i>&nbsp;</span><a href="https://www.youtube.com/channel/UCvlnjn_2g6Hb6jVcCY2EOxA">Youtube</a></p>
+  <section id="music"  class="probootstrap-section">
+    <div class="container">
+      <div class="probootstrap-cta probootstrap-animate">
+        <h2 class="mb20">I love producing music. </h2>
+        <p>I usually prefer producing music on FL Studio, but for audio editing, Audacity is very easy to use. I have
+          uploaded music on some streaming platforms as well. Care to listen? I am open to negative feedback :)
+        </p>
+        <p><span class="icon"><i class="icon-spotify"></i>&nbsp;</span><a
+            href="https://open.spotify.com/artist/4tQXuIKc8QPdRwjC16MrOe" target="_blank">Spotify</a> | <span class="icon"><i
+              class="icon-youtube"></i>&nbsp;</span><a href="https://www.youtube.com/channel/UCvlnjn_2g6Hb6jVcCY2EOxA" target="_blank">Youtube</a></p>
+      </div>
     </div>
-  </div>
+  </section>
 
 
 
@@ -307,12 +309,12 @@
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Quick Links</h4>
             <ul class="stack-link">
-              <li><i class="icon-linkedin"></i><a href="https://linkedin.com/in/ygyash/"> Linkedin</a></li>
-              <li><i class="icon-facebook"></i><a href="https://www.facebook.com/profile.php?id=100017286882067">
+              <li><i class="icon-linkedin"></i><a href="https://linkedin.com/in/ygyash/" target="_blank"> Linkedin</a></li>
+              <li><i class="icon-facebook"></i><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank">
                   Facebook</a></li>
-              <li><i class="icon-instagram"></i><a href="https://www.instagram.com/mista_goyal/"> Instagram</a></li>
-              <li><i class="icon-twitter"></i><a href="https://twitter.com/_yashgoyal_"> Twitter</a></li>
-              <li><i class="icon-mail"></i><a href="mailto:ygyashgoyal@gmail.com"> Mail</a></li>
+              <li><i class="icon-instagram"></i><a href="https://www.instagram.com/mista_goyal/" target="_blank"> Instagram</a></li>
+              <li><i class="icon-twitter"></i><a href="https://twitter.com/_yashgoyal_" target="_blank"> Twitter</a></li>
+              <li><i class="icon-mail"></i><a href="mailto:ygyashgoyal@gmail.com" target="_blank"> Mail</a></li>
             </ul>
           </div>
         </div>
@@ -336,10 +338,10 @@
         <div class="col-md-6">
           <div class="probootstrap-footer-widget right">
             <ul class="probootstrap-social">
-              <li><a href="https://github.com/ygyash"><i class="icon-github2"></i></a></li>
-              <li><a href="https://www.facebook.com/profile.php?id=100017286882067"><i class="icon-facebook"></i></a>
+              <li><a href="https://github.com/ygyash" target="_blank"><i class="icon-github2"></i></a></li>
+              <li><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank"><i class="icon-facebook"></i></a>
               </li>
-              <li><a href="https://www.instagram.com/mista_goyal/"><i class="icon-instagram2"></i></a></li>
+              <li><a href="https://www.instagram.com/mista_goyal/" target="_blank"><i class="icon-instagram2"></i></a></li>
             </ul>
           </div>
         </div>
