--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="text">
               <h3 class="heading">Computer Science and Engineering</h3>
-              <p>Technology thrills me. Keeping up with this small ever changing world has become a hobby.</p>
+              <p>Technology thrills me. Keeping up with our small and ever changing world has become a hobby.</p>
             </div>
 
           </div>
@@ -280,7 +280,7 @@
       <div class="probootstrap-cta probootstrap-animate">
         <h2 class="mb20">I love producing music. </h2>
         <p>I usually prefer producing music on FL Studio, but for audio editing, Audacity is very easy to use. I have
-          uploaded music on some streaming platforms as well. Care to listen? I am open to negative feedback :)
+          uploaded music on some streaming platforms as well. Care to listen? I am open to feedbacks :)
         </p>
         <p><span class="icon"><i class="icon-spotify"></i>&nbsp;</span><a
             href="https://open.spotify.com/artist/4tQXuIKc8QPdRwjC16MrOe" target="_blank">Spotify</a> | <span class="icon"><i
