skills modified to pentagon

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>Yash Goyal | Portfolio</title>
   <meta name="theme-color" content="#000000">
   <meta name="description" content="Portfolio of Yash Goyal">
-  <meta name="keywords"
-    content="yash, yash goyal, goyal,portfolio, developer, coding, music">
+  <meta name="keywords" content="yash, yash goyal, goyal,portfolio, developer, coding, music">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/vendor/fullpage.min.css" />
@@ -44,11 +43,13 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="doc/resume.pdf" target="_blank">Resume</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <ul class="probootstrap-right-nav hidden-xs">
           <li><a href="https://github.com/ygyash" target="_blank"><i class="icon-github2"></i></a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank"><i class="icon-facebook2"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank"><i
+                class="icon-facebook2"></i></a></li>
           <li><a href="https://www.instagram.com/mista_goyal/" target="_blank"><i class="icon-instagram2"></i></a></li>
         </ul>
         <div class="extra-text visible-xs">
@@ -137,73 +138,13 @@
           <h2>Skills</h2>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-2 probootstrap-animate" data-animate-effect="fadeInLeft" style="text-align: center;">
-          <h4>Node.js/Express</h4>
-          <svg id="nodejs" class="skills-graph" width="150" height="150">
-            <circle cx="70" cy="70" r="60" stroke-width="15"></circle>
-          </svg>
+      <div class="row" style="text-align: center;">
+        <div class="col-sm-12 probootstrap-animate">
+          <div class="row skills-graph" style="text-align: center;"></div>
         </div>
-        <div class="col-sm-2 probootstrap-animate" data-animate-effect="fadeInLeft" style="text-align: center;">
-          <h4>HTML</h4>
-          <svg id="html" class="skills-graph" width="150" height="150">
-            <circle cx="70" cy="70" r="60" stroke-width="15"></circle>
-          </svg>
-        </div>
-        <div class="col-sm-2 probootstrap-animate" data-animate-effect="fadeInLeft" style="text-align: center;">
-          <h4>CSS</h4>
-          <svg id="css" class="skills-graph" width="150" height="150">
-            <circle cx="70" cy="70" r="60" stroke-width="15"></circle>
-          </svg>
-        </div>
-        <div class="col-sm-2 probootstrap-animate" data-animate-effect="fadeInLeft" style="text-align: center;">
-          <h4>Mongo DB</h4>
-          <svg id="mysql" class="skills-graph" width="150" height="150">
-            <circle cx="70" cy="70" r="60" stroke-width="15"></circle>
-          </svg>
-        </div>
-        <div class="col-sm-2 probootstrap-animate" data-animate-effect="fadeInLeft" style="text-align: center;">
-          <h4>Python</h4>
-          <svg id="python" class="skills-graph" width="150" height="150">
-            <circle cx="70" cy="70" r="60" stroke-width="15"></circle>
-          </svg>
-        </div>
-        <div class="col-sm-2 probootstrap-animate" data-animate-effect="fadeInLeft" style="text-align: center;">
-          <h4>C++</h4>
-          <svg id="cpp" class="skills-graph" width="150" height="150">
-            <circle cx="70" cy="70" r="60" stroke-width="15"></circle>
-          </svg>
-        </div>
-
       </div>
-      <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-2 probootstrap-animate" data-animate-effect="fadeInLeft" style="text-align: center;">
-          <h4>Web Devloping</h4>
-          <svg id="webdev" class="skills-graph" width="150" height="150">
-            <circle cx="70" cy="70" r="60" stroke-width="15"></circle>
-          </svg>
+      
         </div>
-        <div class="col-sm-2 probootstrap-animate" data-animate-effect="fadeInLeft" style="text-align: center;">
-          <h4>Blockchain</h4>
-          <svg id="blockchain" class="skills-graph" width="150" height="150">
-            <circle cx="70" cy="70" r="60" stroke-width="15"></circle>
-          </svg>
-        </div>
-        <div class="col-sm-2 probootstrap-animate" data-animate-effect="fadeInLeft" style="text-align: center;">
-          <h4>Machine Learning</h4>
-          <svg id="ml" class="skills-graph" width="150" height="150">
-            <circle cx="70" cy="70" r="60" stroke-width="15"></circle>
-          </svg>
-        </div>
-        <div class="col-sm-2 probootstrap-animate" data-animate-effect="fadeInLeft" style="text-align: center;">
-          <h4>Algorithms and DS</h4>
-          <svg id="algo" class="skills-graph" width="150" height="150">
-            <circle cx="70" cy="70" r="60" stroke-width="15"></circle>
-          </svg>
-        </div>
-        <div class="col-sm-2"></div>
-
       </div>
     </div>
   </div>
@@ -220,8 +161,7 @@
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a href=""><img src="img/project-1.gif" class="img-responsive img-border"
-                  alt="dhwani-portal"></a>
+              <a href=""><img src="img/project-1.gif" class="img-responsive img-border" alt="dhwani-portal"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0">Dhwani Portal</h2>
@@ -231,7 +171,8 @@
               </p>
               <p><span class="icon"><i class="icon-global"></i>&nbsp;</span><a
                   href="https://dhwaniportal.herokuapp.com/" target="_blank">Live Demo | <span class="icon"><i
-                      class="icon-github2"></i>&nbsp;</span><a href="https://github.com/ygyash/dhwani-portal" target="_blank">Source
+                      class="icon-github2"></i>&nbsp;</span><a href="https://github.com/ygyash/dhwani-portal"
+                    target="_blank">Source
                     Code</a></a></p>
 
             </div>
@@ -240,24 +181,22 @@
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a href=""><img src="img/project-2.gif" class="img-responsive img-border"
-                  alt="project-2"></a>
+              <a href=""><img src="img/project-2.gif" class="img-responsive img-border" alt="project-2"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0">BlockID</h2>
               <p class="category">Ethereum Blockchain, Web3.js, Node.js, HTML, CSS</p>
               <p>Ethereum based identity system where the user will be assigned an address which can be universally used
                 to authenticate various attributes associated with his identity.</p>
-              <p><span class="icon"><i class="icon-github2"></i>&nbsp;</span><a
-                  href="https://github.com/ygyash/blockid" target="_blank">Source Code</a></a></p>
+              <p><span class="icon"><i class="icon-github2"></i>&nbsp;</span><a href="https://github.com/ygyash/blockid"
+                  target="_blank">Source Code</a></a></p>
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a href=""><img src="img/project-3.gif" class="img-responsive img-border"
-                  alt="project-3"></a>
+              <a href=""><img src="img/project-3.gif" class="img-responsive img-border" alt="project-3"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0">QRit</h2>
@@ -265,8 +204,8 @@
               <p>Easily transfer a file from web to any platform that reads a QR code. Node js has been used to create
                 back-end of this project. Bootstrap template 'Grayscale' has been used for front end.
               </p>
-              <p><span class="icon"><i class="icon-github2"></i>&nbsp;</span><a
-                  href="https://github.com/ygyash/qrit" target="_blank">Source Code</a></a></p>
+              <p><span class="icon"><i class="icon-github2"></i>&nbsp;</span><a href="https://github.com/ygyash/qrit"
+                  target="_blank">Source Code</a></a></p>
             </div>
           </div>
         </div>
@@ -275,7 +214,7 @@
   </section>
 
 
-  <section id="music"  class="probootstrap-section">
+  <section id="music" class="probootstrap-section">
     <div class="container">
       <div class="probootstrap-cta probootstrap-animate">
         <h2 class="mb20">I love producing music. </h2>
@@ -283,8 +222,9 @@
           uploaded music on some streaming platforms as well. Care to listen? I am open to feedbacks :)
         </p>
         <p><span class="icon"><i class="icon-spotify"></i>&nbsp;</span><a
-            href="https://open.spotify.com/artist/4tQXuIKc8QPdRwjC16MrOe" target="_blank">Spotify</a> | <span class="icon"><i
-              class="icon-youtube"></i>&nbsp;</span><a href="https://www.youtube.com/channel/UCvlnjn_2g6Hb6jVcCY2EOxA" target="_blank">Youtube</a></p>
+            href="https://open.spotify.com/artist/4tQXuIKc8QPdRwjC16MrOe" target="_blank">Spotify</a> | <span
+            class="icon"><i class="icon-youtube"></i>&nbsp;</span><a
+            href="https://www.youtube.com/channel/UCvlnjn_2g6Hb6jVcCY2EOxA" target="_blank">Youtube</a></p>
       </div>
     </div>
   </section>
@@ -303,17 +243,22 @@
             <h4 class="heading">About Yash Goyal</h4>
             <p>Hailing from Noida, UP, India</p>
             <p>Third Year CS Undergraduate Student at Birla Institute of Technology, Mesra</p>
+            <p><a href="doc/resume.pdf" target="_blank">Resume</a></p>
           </div>
         </div>
         <div class="col-md-3">
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Quick Links</h4>
             <ul class="stack-link">
-              <li><i class="icon-linkedin"></i><a href="https://linkedin.com/in/ygyash/" target="_blank"> Linkedin</a></li>
-              <li><i class="icon-facebook"></i><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank">
+              <li><i class="icon-linkedin"></i><a href="https://linkedin.com/in/ygyash/" target="_blank"> Linkedin</a>
+              </li>
+              <li><i class="icon-facebook"></i><a href="https://www.facebook.com/profile.php?id=100017286882067"
+                  target="_blank">
                   Facebook</a></li>
-              <li><i class="icon-instagram"></i><a href="https://www.instagram.com/mista_goyal/" target="_blank"> Instagram</a></li>
-              <li><i class="icon-twitter"></i><a href="https://twitter.com/_yashgoyal_" target="_blank"> Twitter</a></li>
+              <li><i class="icon-instagram"></i><a href="https://www.instagram.com/mista_goyal/" target="_blank">
+                  Instagram</a></li>
+              <li><i class="icon-twitter"></i><a href="https://twitter.com/_yashgoyal_" target="_blank"> Twitter</a>
+              </li>
               <li><i class="icon-mail"></i><a href="mailto:ygyashgoyal@gmail.com" target="_blank"> Mail</a></li>
             </ul>
           </div>
@@ -339,9 +284,11 @@
           <div class="probootstrap-footer-widget right">
             <ul class="probootstrap-social">
               <li><a href="https://github.com/ygyash" target="_blank"><i class="icon-github2"></i></a></li>
-              <li><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank"><i class="icon-facebook"></i></a>
+              <li><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank"><i
+                    class="icon-facebook"></i></a>
               </li>
-              <li><a href="https://www.instagram.com/mista_goyal/" target="_blank"><i class="icon-instagram2"></i></a></li>
+              <li><a href="https://www.instagram.com/mista_goyal/" target="_blank"><i class="icon-instagram2"></i></a>
+              </li>
             </ul>
           </div>
         </div>
