--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166045540-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-166045540-1');
+  </script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Yash Goyal | Portfolio</title>
+  <title>Yash Goyal</title>
   <meta name="theme-color" content="#000000">
-  <meta name="description" content="Portfolio of Yash Goyal">
+  <meta name="description"
+    content="An undergraduate student learning something new everyday to make a difference. This is the portfolio of Yash Goyal.">
+  <meta name="image" content="http://www.yashgoyal.tech/img/user_img.jpg">
+
   <meta name="keywords" content="yash, yash goyal, goyal,portfolio, developer, coding, music">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
@@ -143,10 +156,10 @@
           <div class="row skills-graph" style="text-align: center;"></div>
         </div>
       </div>
-      
-        </div>
-      </div>
+
     </div>
+  </div>
+  </div>
   </div>
   <!-- END section -->
 
