--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     content="An undergraduate student learning something new everyday to make a difference. This is the portfolio of Yash Goyal.">
   <meta name="image" content="http://www.yashgoyal.tech/img/user_img.jpg">
 
-  <meta name="keywords" content="yash, yash goyal, goyal,portfolio, developer, coding, music">
+  <meta name="keywords" content="yash, yash goyal, goyal,portfolio, developer, coding, music,bit, noida, bit mesra, ieee, dhwani">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/vendor/fullpage.min.css" />
