jack of all trades full stop

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="text">
               <h3 class="heading">Jack of All Trades</h3>
               <p>I always try to learn and know more about every other new piece of technology including Blockchain
-                and Machine Learning. Jack of all trades, but master of none (yet :p) </p>
+                and Machine Learning. Jack of all trades, but master of none (yet :p). </p>
             </div>
           </div>
         </div>
