--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" href="favicon.ico">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166045540-1"></script>
   <script>
@@ -21,10 +22,10 @@
     content="An undergraduate student learning something new everyday to make a difference. This is the portfolio of Yash Goyal.">
   <meta name="image" content="http://www.yashgoyal.tech/img/user_img.jpg">
 
-  <meta name="keywords" content="yash, yash goyal, goyal,portfolio, developer, coding, music,bit, noida, bit mesra, ieee, dhwani">
+  <meta name="keywords"
+    content="yash, yash goyal, goyal,portfolio, developer, coding, music,bit, noida, bit mesra, ieee, dhwani">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/vendor/fullpage.min.css" />
 
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.min.css">
@@ -53,11 +54,11 @@
       <nav role="navigation" class="probootstrap-nav hidden-xs">
         <ul class="probootstrap-main-nav">
           <li class="active"><a href="#welcome">Home</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="doc/resume.pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a class="nav-link" href="#projects">Projects</a></li>
+          <li><a class="nav-link" href="#skills">Skills</a></li>
+          <li><a class="nav-link" href="#about">About</a></li>
+          <li><a class="nav-link" href="doc/resume.pdf" target="_blank">Resume</a></li>
+          <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <ul class="probootstrap-right-nav hidden-xs">
           <li><a href="https://github.com/ygyash" target="_blank"><i class="icon-github2"></i></a></li>
@@ -69,9 +70,10 @@
           <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
           <h5>Connect</h5>
           <ul class="social-buttons">
-            <li><a href="#"><i class="icon-twitter"></i></a></li>
-            <li><a href="#"><i class="icon-facebook2"></i></a></li>
-            <li><a href="#"><i class="icon-instagram2"></i></a></li>
+            <li><a href="https://github.com/ygyash"><i class="icon-github2"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100017286882067"><i class="icon-facebook2"></i></a>
+            </li>
+            <li><a href="https://www.instagram.com/mista_goyal/"><i class="icon-instagram2"></i></a></li>
           </ul>
         </div>
       </nav>
@@ -119,7 +121,7 @@
               <i class="icon-global"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Web Developing </h3>
+              <h3 class="heading">Web Development </h3>
               <p>Everyday there is something new to learn in this field. I am trying to make websites in a much more
                 efficient manner than before and still learning to do so. </p>
             </div>
@@ -141,26 +143,6 @@
     </div>
     <canvas id=q>
   </section>
-  <!-- END section -->
-
-
-  <div id="skills" class="probootstrap-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 section-heading probootstrap-animate">
-          <h2>Skills</h2>
-        </div>
-      </div>
-      <div class="row" style="text-align: center;">
-        <div class="col-sm-12 probootstrap-animate">
-          <div class="row skills-graph" style="text-align: center;"></div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-  </div>
-  </div>
   <!-- END section -->
 
   <section id="projects" class="probootstrap-section">
@@ -226,6 +208,24 @@
     </div>
   </section>
 
+
+  <div id="skills" class="probootstrap-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 section-heading probootstrap-animate">
+          <h2>Skills</h2>
+        </div>
+      </div>
+      <div class="row" style="text-align: center;">
+        <div class="col-sm-12 probootstrap-animate">
+          <div class="row skills-graph" style="text-align: center;"></div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- END section -->
 
   <section id="music" class="probootstrap-section">
     <div class="container">
