--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
           <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
           <h5>Connect</h5>
           <ul class="social-buttons">
-            <li><a href="https://github.com/ygyash"><i class="icon-github2"></i></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100017286882067"><i class="icon-facebook2"></i></a>
+            <li><a href="https://github.com/ygyash" target="_blank"><i class="icon-github2"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank"><i class="icon-facebook2"></i></a>
             </li>
-            <li><a href="https://www.instagram.com/mista_goyal/"><i class="icon-instagram2"></i></a></li>
+            <li><a href="https://www.instagram.com/mista_goyal/" target="_blank"><i class="icon-instagram2"></i></a></li>
           </ul>
         </div>
       </nav>
