--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
         </div>
       </div>
     </div>
-    <canvas id=q>
   </section>
   <!-- END section -->
 
@@ -227,8 +226,7 @@
 
   <!-- END section -->
 
-  <section id="music" class="probootstrap-section">
-    <div class="container">
+    <div id="music" class="container">
       <div class="probootstrap-cta probootstrap-animate">
         <h2 class="mb20">I love producing music. </h2>
         <p>I usually prefer producing music on FL Studio, but for audio editing, Audacity is very easy to use. I have
@@ -240,7 +238,7 @@
             href="https://www.youtube.com/channel/UCvlnjn_2g6Hb6jVcCY2EOxA" target="_blank">Youtube</a></p>
       </div>
     </div>
-  </section>
+
 
 
 
@@ -249,7 +247,10 @@
 
 
   <footer id="contact" class="probootstrap-footer probootstrap-bg">
+    <canvas id=q style="position: absolute;"></canvas>
+
     <div class="container">
+
       <div class="row mb60">
         <div class="col-md-3">
           <div class="probootstrap-footer-widget">
