--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
           <h5>Connect</h5>
           <ul class="social-buttons">
             <li><a href="https://github.com/ygyash" target="_blank"><i class="icon-github2"></i></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank"><i class="icon-facebook2"></i></a>
+            <li><a href="https://www.facebook.com/profile.php?id=100017286882067" target="_blank"><i
+                  class="icon-facebook2"></i></a>
             </li>
-            <li><a href="https://www.instagram.com/mista_goyal/" target="_blank"><i class="icon-instagram2"></i></a></li>
+            <li><a href="https://www.instagram.com/mista_goyal/" target="_blank"><i class="icon-instagram2"></i></a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -226,18 +228,18 @@
 
   <!-- END section -->
 
-    <div id="music" class="container">
-      <div class="probootstrap-cta probootstrap-animate">
-        <h2 class="mb20">I love producing music. </h2>
-        <p>I usually prefer producing music on FL Studio, but for audio editing, Audacity is very easy to use. I have
-          uploaded music on some streaming platforms as well. Care to listen? I am open to feedbacks :)
-        </p>
-        <p><span class="icon"><i class="icon-spotify"></i>&nbsp;</span><a
-            href="https://open.spotify.com/artist/4tQXuIKc8QPdRwjC16MrOe" target="_blank">Spotify</a> | <span
-            class="icon"><i class="icon-youtube"></i>&nbsp;</span><a
-            href="https://www.youtube.com/channel/UCvlnjn_2g6Hb6jVcCY2EOxA" target="_blank">Youtube</a></p>
-      </div>
+  <div id="music" class="container">
+    <div class="probootstrap-cta probootstrap-animate">
+      <h2 class="mb20">I love producing music. </h2>
+      <p>I usually prefer producing music on FL Studio, but for audio editing, Audacity is very easy to use. I have
+        uploaded music on some streaming platforms as well. Care to listen? I am open to feedbacks :)
+      </p>
+      <p><span class="icon"><i class="icon-spotify"></i>&nbsp;</span><a
+          href="https://open.spotify.com/artist/4tQXuIKc8QPdRwjC16MrOe" target="_blank">Spotify</a> | <span
+          class="icon"><i class="icon-youtube"></i>&nbsp;</span><a
+          href="https://www.youtube.com/channel/UCvlnjn_2g6Hb6jVcCY2EOxA" target="_blank">Youtube</a></p>
     </div>
+  </div>
 
 
 
@@ -247,7 +249,10 @@
 
 
   <footer id="contact" class="probootstrap-footer probootstrap-bg">
-    <canvas id=q style="position: absolute;"></canvas>
+    <canvas id=q style="    top: 0;
+    position: absolute;
+    z-index: 1;
+    opacity: 0.5;"></canvas>
 
     <div class="container">
 
@@ -255,8 +260,8 @@
         <div class="col-md-3">
           <div class="probootstrap-footer-widget">
             <h4 class="heading">About Yash Goyal</h4>
-            <p>Hailing from Noida, UP, India</p>
-            <p>Third Year CS Undergraduate Student at Birla Institute of Technology, Mesra</p>
+            <p style="color: white;">Hailing from Noida, UP, India</p>
+            <p style="color: white;">Third Year CS Undergraduate Student at Birla Institute of Technology, Mesra</p>
             <p><a href="doc/resume.pdf" target="_blank">Resume</a></p>
           </div>
         </div>
