--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
               <p>A portal made for the Music Club of BIT Mesra which is used for recommending songs to a Band for
                 performances according to their needs. It is also used for booking day to day slots of the music room.
               </p>
-              <p><span class="icon"><i class="icon-global"></i>&nbsp;</span><a
-                  href="https://dhwaniportal.herokuapp.com/" target="_blank">Live Demo | <span class="icon"><i
+              <p>
+                <span class="icon"><i class="icon-global"></i>&nbsp;</span><a href="https://dhwaniportal.herokuapp.com/" target="_blank">Live Demo | <span class="icon"><i
                       class="icon-github2"></i>&nbsp;</span><a href="https://github.com/ygyash/dhwani-portal"
                     target="_blank">Source
                     Code</a></a></p>
@@ -196,11 +196,11 @@
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0">QRit</h2>
-              <p class="category">Node.js, HTML, CSS</p>
+              <p class="category"> AWS S3, Node.js, HTML, CSS</p>
               <p>Easily transfer a file from web to any platform that reads a QR code. Node js has been used to create
                 back-end of this project. Bootstrap template 'Grayscale' has been used for front end.
               </p>
-              <p><span class="icon"><i class="icon-github2"></i>&nbsp;</span><a href="https://github.com/ygyash/qrit"
+              <p><i class="icon-global"></i>&nbsp;</span><a href="https://yg-qrit.herokuapp.com/" target="_blank">Live Demo | <span class="icon"><i class="icon-github2"></i>&nbsp;</span><a href="https://github.com/ygyash/qrit"
                   target="_blank">Source Code</a></a></p>
             </div>
           </div>
